Bug 1478828 - try matching string with UTF-8 if conversion fails. r=aceman

--HG--
extra : rebase_source : 311c2a85de0f30c8f9390623b537eb6cc56df950